# ReactApp1.Server/swagger.json
@@ -57,76 +57,9 @@
           }
         }
       }
-    },
-    "/weather-forecast": {
-      "get": {
-        "tags": [
-          "WeatherForecast"
-        ],
-        "operationId": "GetWeatherForecast",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/WeatherForecast"
-              }
-            }
-          }
-        }
-      }
     }
   },
   "definitions": {
-    "DateOnly": {
-      "type": "object",
-      "properties": {
-        "year": {
-          "format": "int32",
-          "type": "integer"
-        },
-        "month": {
-          "format": "int32",
-          "type": "integer"
-        },
-        "day": {
-          "format": "int32",
-          "type": "integer"
-        },
-        "dayOfWeek": {
-          "$ref": "#/definitions/DayOfWeek"
-        },
-        "dayOfYear": {
-          "format": "int32",
-          "type": "integer",
-          "readOnly": true
-        },
-        "dayNumber": {
-          "format": "int32",
-          "type": "integer",
-          "readOnly": true
-        }
-      }
-    },
-    "DayOfWeek": {
-      "format": "int32",
-      "enum": [
-        0,
-        1,
-        2,
-        3,
-        4,
-        5,
-        6
-      ],
-      "type": "integer"
-    },
     "Job": {
       "type": "object",
       "properties": {
@@ -172,26 +105,6 @@
           "items": {
             "type": "string"
           }
-        }
-      }
-    },
-    "WeatherForecast": {
-      "type": "object",
-      "properties": {
-        "date": {
-          "$ref": "#/definitions/DateOnly"
-        },
-        "temperatureC": {
-          "format": "int32",
-          "type": "integer"
-        },
-        "temperatureF": {
-          "format": "int32",
-          "type": "integer",
-          "readOnly": true
-        },
-        "summary": {
-          "type": "string"
         }
       }
     }
